# rsod-decode

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  build_pyz.py  pyproject.toml  requirements.txt  rsod-debug.py  rsod-decode.md  rsod-decode.py
.github/workflows/: pyzw-smoke.yml
backend/: app.py  corefile.py  decoder.py  dwarf_info.py  gdb_backend.py  models.py  requirements.txt  serializers.py  symbols.py
backend/decoders/: __init__.py  base.py  edk2_arm64.py  uefi_arm64.py  uefi_x86.py  unwinding.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: BacktracePanel.tsx  CrashBanner.tsx  DetailPanel.tsx  ExpressionEval.tsx  GdbPanel.tsx  HexAddress.tsx  HistoryPanel.tsx  LldbConsole.tsx  (+4 more)
scripts/: smoke-pyzw.sh
src/rsod_decode/: __init__.py  __main__.py  app.py  callsite_args.py  cli.py  cli_history.py  corefile.py  data_dir.py  decoder.py  disasm.py  dwarf_backend.py  esr.py  gdb_bridge.py  ingest.py  lldb_backend.py  lldb_bridge.py  lldb_loader.py  minidump.py  models.py  pdb_routing.py  pe_backend.py  resource_paths.py  serializers.py  server.py  service.py  session.py  storage.py  symbols.py  tail_call_reconstructor.py
tests/: README.md  _datasets.py  conftest.py  test_callsite_args.py  test_lldb_foundation.py  test_minidump.py  test_regression_api.py  test_regression_api_values.py  test_regression_browser.py  test_regression_parser.py  test_storage.py
tests/fixtures/: pe_aa64_crashtest.efi  rsod_dell_aa64.txt  rsod_dell_x64.txt  rsod_qemu_devkit.txt
(+22 files in other folders)
